# geometricalgebra

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  python-app.yml
geometricalgebra/: __init__.py  algebra.py  cayley.py  cga.py  cga2d.py  cga3d.py  cga4d.py  coherent_point_drift.py  utils.py  vector.py  viewer.py
geometricalgebra/tests/: test_algebra.py  test_cayley.py  test_coherent_point_drift.py  test_gradient.py  test_quaterion_interpolation.py  test_tensorflow.py  test_vector.py  test_versor.py
notebooks/: CoherentPointDrift.ipynb  ConformalGeometricAlgebra.ipynb  Robots.ipynb  conformal_geometric_algebra.ipynb
test_data/point_registration/: source.txt  target.txt
